<resources>
    <string name="app_name">Camp Navigate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_week_layout">WeekLayout</string>
    <string name="tab_text_1">Menu</string>
    <string name="tab_text_2">Field Trips</string>
    <string name="tab_text_3">Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position">Eleanor Ramseier – Camp Navigate Director</string>
    <string name="eleanorBio">Eleanor has been serving youth in the Wabash Valley for 27+ years. She began volunteering as a youth worker alongside her husband in 1990. In the most recent past, as Executive Director of the local YMCA, she helped develop and oversee the youth activities as well as the summer camps. She is the mother of three awesome adult children. She has always had a desire to encourage youth to find their passion, set goals and be strong in their faith! With Camp Navigate she can now combine these passions with another aspiration she has– developing youth to succeed in our community’s workforce! She loves spending time with family and friends, running, hiking, and anything adventurous.</string>
    <string name="eleanorEmail">Email:eleanor@campnavigate.org</string>
    <string name="katelynposition">Katelyn Ellinger – Program Director</string>
    <string name="marcelaPostition">Marcela - Bookkeeper</string>
    <string name="katelynBio">We are so blessed to have Katelyn as a part of our Camp Navigate Team!  In Katelyn’s words, “I was born to put my whole heart into our youth. My day is filled with LOVE from littles, they teach me so much!” Katelyn starts her day at Fuqua Elementary as a Special Education Assistant and continues it at Camp Navigate’s After-School Care as the Program Director! During the summer she will assist in designing and Co-Directing our programs at camp. She has two years completed at Indiana State University in Elementary Education and plans to further her education with the end goal being a kindergarten teacher. Some of her favorite days are spent with friends, her fur babies and being outdoors in the sunshine!</string>
    <string name="katelynEmail">Email: katelyn@campnavigate.org</string>
    <string name="marcelaBio">Marcela was born in Colombia, South America, and graduated from Universidad del Rosario with a degree in Business Administration. She met her husband Jeff there, and they moved to California in 2013. They moved to Terre haute in 2015 to be closer to her husband\'s family in Indiana. She has fifteen years of experience attending international markets for the steel industry. She also has experience in the financial sector and is combining business, organizational skills, and knowledge into her new position at Camp Navigate. She is very passionate about helping others. She enjoys furthering her education and likes to take on new challenges. This is her first job for a nonprofit organization, which is very exciting for her. She is glad to have the opportunity to bring her knowledge and experience in this new position. She loves spending time with her husband and dog in the country, and with her nephews in Colombia. She eniovs dancing salsa and tropical music.What excites you about Camp Navigate? There is a lot of positive energy and dynamism in Camp Navigate, not only the kids but the team too. It is very motivating and inspiring. Helping the kids to discover and improve their skills is rewarding. We are preparing a new generation. I am so inspired to be working here that I want to become a Spanish Teacher for the summer. Learning another language will open a whole world of new opportunities for the kids.</string>
    <string name="marcelaEmail">marcela@campnavigate.org</string>
    <string name="welcome">Welcome</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="link_to_view_pictures">Link to view pictures:</string>
    <string name="link">Link</string>
    <string name="camp_navigate">Camp Navigate</string>
    <string name="test_message">Welcome! Summer Camp is new to so many and each summer is new and exciting at Camp Navigate! We will have a field day and fun activities as the campers gain the courage to adapt to new friends, work together, and become familiar with Summer Camp Life!</string>
    <string name="test_timestamp">April 6,2020 at 8:46</string>
    <string name="test_week">Week 1</string>
    <string name="where">Where</string>
    <string name="departure">Departure</string>
    <string name="when">When</string>
    <string name="bring">Bring</string>
    <string name="week_1">Week 1</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="kindergarten_2nd">Kindergarten-2nd</string>
    <string name="_3rd_5th">3rd-5th</string>
    <string name="middle_school">Middle SChool</string>
    <string name="test_bio">Welcome! Summer Camp is new to so many and each summer is new and exciting at Camp Navigate! We will have a field day and fun activities as the campers gain the courage to adapt to new friends, work together, and become familiar with Summer Camp Life!</string>
    <string name="contact_info">TextView</string>
    <string name="theme_description">Welcome! Summer Camp is new to so many and each summer is new and exciting at Camp Navigate! We will have a field day and fun activities as the campers gain the courage to adapt to new friends, work together, and become familiar with Summer Camp Life!</string>
    <string name="tw1">Week 1: Be the Change</string>
    <string name="tw2">Week 2: Courage to Encourage</string>
    <string name="tw3">Week 3:Knowledge is Power</string>
    <string name="tw4">Week 4: Think Big</string>
    <string name="tw5">Week 5: Home of the Brave</string>
    <string name="tw6">Week 6: Christmas in July</string>
    <string name="tw7">Week 7: SUPER Healthy Habits</string>
    <string name="tw8">Week 8: Team Work Makes the Dream Work</string>
    <string name="tw9">Week 9: Camps Got Talent</string>
    <string name="tw10">Week 10: Your Family is My Family</string>
    <string name="tdw1">Welcome! Summer Camp is new to so many and each summer is new and exciting at Camp Navigate! We will have a field day and fun activities as the campers gain the courage to adapt to new friends, work together, and become familiar with Summer Camp Life!</string>
    <string name="tdw2">We love encouraging our campers! We, also know, sometimes as a young person it takes courage to reach out to your peers. This is a perfect time to focus on inclusion, acceptance, and kindness. We will practice including others as we dine at the Grand Traverse Pie Company!</string>
    <string name="tdw3">This week is all about our campers’ personal expertise. They will be able to share their area of knowledge as we have a “teaching” Show and Tell week. The campers will take turns teaching others a particular activity they love and would like to share with their friends! It will take courage to speak in front of others but we are excited to see our campers’ communication skills improve and watch them shine amongst their peers!</string>
    <string name="tdw4">This week we will think outside the box! Our Campers will learn from past inventors that had courage to make mistakes and discover that failures can be the beginning of something great. Attitude and perspective changes everything! We can’t wait to see what our Campers will create!</string>
    <string name="tdw5">This week our campers will enjoy many activities that will remind us of the bravery of so many heroes throughout history. Many have benefited by the courage of our forefathers. Campers will explore our great nation’s history and celebrate the freedoms that we are so privileged to have. They will be designing their very own T-Shirt in honor of our Country’s Birthday!</string>
    <string name="tdw6">We are blessed to have a real hero that watches over us daily. This week our devotionals will focus on the strength and love that we receive from God every single day. Our activities will center around how best to connect and celebrate each other with a Christ like love. And of course there will be a few Christmas surprises along the way.</string>
    <string name="tdww7">We love our campers just the way they are! This week we will learn to love and respect ourselves! We all come in different shapes and sizes and this week we will focus on our amazing uniqueness! Having courage to be the best “me” requires making wise choices.</string>
    <string name="tdw8">Join us as we have a week full of activities of Olympic proportion. This week we will learn about the courageous athletes who have traveled to Japan to represent the United States at the Summer Olympics. We will hear their stories of struggles and success; we will learn the history of this great event; and we will have some very competitive, yet friendly, Summer Games –Camp Navigate style!</string>
    <string name="tdw9">This week is a favorite for our Campers! They love preparing group acts or going solo…either way, it is their creation (within limits). No capes needed for these Super Heroes that are up on stage!</string>
    <string name="tdw10">During this last week of Camp, we celebrate with a private pool party at the Robinson pool and our end of the summer family cookout! By the end of summer, the Campers have played hard, worked hard and learned a lot about how to succeed in life! Our hope is that they will now better know how to communicate in a respectful manner with friends and family as they have the courage to enter a new school year.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="cn_logo">Camp Navigate Logo</string>
    <string name="staff_picture">Staff Picture</string>
    <string name="week_picture">Week Picture</string>
    <string name="announcements">Announcements</string>
    <string name="reload">Reload</string>
</resources>
