<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:elevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="4dp">


        <TextView
            android:id="@+id/dayFt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="144dp"
            android:layout_marginTop="5dp"
            android:text="@string/test_week"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/where"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/departure"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.405" />

        <TextView
            android:id="@+id/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/departure"

            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/when"
            app:layout_constraintTop_toBottomOf="@+id/where" />

        <TextView
            android:id="@+id/when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/when"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/bring"
            app:layout_constraintTop_toBottomOf="@+id/departure" />

        <TextView
            android:id="@+id/bring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/bring"
            android:textColor="#000000"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/when" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
