<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="10dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cnIcon"
        app:layout_constraintTop_toBottomOf="@+id/cnIcon">


        <ImageView
            android:id="@+id/cnIcon"
            android:layout_width="82dp"
            android:layout_height="95dp"
            android:scaleType="centerCrop"
            android:layout_margin="4dp"
            android:src="@drawable/campnavigateicon"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:layout_toRightOf="@id/cnIcon"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/Announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cnIcon"

            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="@string/test_message"
            android:textColor="#555"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="98dp" />

        <TextView
            android:layout_margin="6dp"
            android:layout_toRightOf="@id/cnIcon"
            android:layout_below="@id/title"
            android:id="@+id/timeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_timestamp"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="40dp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
